# LatentCrucible

./: .gitignore  README.md  pyproject.toml
src/raman_tumor_classifier/: __init__.py  data.py  preprocessing.py  train_baseline.py
tests/: test_data.py  test_preprocessing.py
